--- a/Puzzle1.html
+++ b/Puzzle1.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play Puzzle 1 1.</tw-noscript></noscript></tw-story>
-<tw-storydata name="Puzzle 1 1" startnode="2" creator="Twine" creator-version="2.10.0" format="Harlowe" format-version="3.3.9" ifid="5ef54f42-0bdf-4a1f-b98a-363c6e6cc463" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Check Answer" tags="" position="575,300" size="100,100">(if: $answer is &quot;usa&quot; or $answer is &quot;USA&quot; )[Correct!
+<tw-storydata name="Puzzle 1 1" startnode="2" creator="Twine" creator-version="2.10.0" format="Harlowe" format-version="3.3.9" ifid="5ef54f42-0bdf-4a1f-b98a-363c6e6cc463" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Check Answer" tags="" position="575,300" size="100,100">(if: $answer is &quot;usa&quot; or $answer is &quot;USA&quot; or $answer is &quot;Usa&quot; or $answer is &quot;u.s.a.&quot; or $answer is &quot;U.S.A.&quot; )[Correct!
 
 Record this piece of the puzzle:
 
 *england our liege, we were their vassal*]
 
-(if: $answer is not &quot;usa&quot; and $answer is not &quot;USA&quot;)
+(if: $answer is not &quot;usa&quot; and $answer is not &quot;USA&quot; and $answer is not &quot;Usa&quot; and $answer is not &quot;u.s.a.&quot; and $answer is not &quot;U.S.A.&quot;)
 [Incorrect![[Try Again-&gt;Puzzle 1]]]</tw-passagedata><tw-passagedata pid="2" name="Puzzle 1" tags="" position="575,175" size="100,100">PUZZLE #1:
 
 Find the different letter in each pair 
